@@ -23,7 +23,6 @@ import static java.lang.Math.toIntExact;
 import static java.net.HttpURLConnection.HTTP_FORBIDDEN;
 import static java.net.HttpURLConnection.HTTP_NOT_FOUND;
 import static java.net.HttpURLConnection.HTTP_OK;
-import static java.time.Duration.ofMillis;
 import static java.time.Duration.ofSeconds;
 
 import com.exedio.cope.util.Properties;
@@ -31,10 +30,18 @@ import com.exedio.cope.util.ServiceProperties;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpRequest.BodyPublishers;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodySubscribers;
 import java.time.Duration;
+import java.util.OptionalLong;
+import java.util.function.Supplier;
 
 @ServiceProperties(VaultHttpService.Props.class)
 public final class VaultHttpService extends VaultNonWritableService
@@ -59,13 +66,31 @@ public final class VaultHttpService extends VaultNonWritableService
 	{
 		try
 		{
-			return connectForGet(hash, REQUEST_METHOD_HEAD).getContentLength();
+			return getContentLength(getOk(hash, REQUEST_METHOD_HEAD, BodySubscribers::discarding), hash);
 		}
 		catch(final IOException e)
 		{
 			throw wrap(hash, e);
 		}
 	}
+
+	private long getContentLength(
+			final HttpResponse<?> response,
+			final String hash)
+	{
+		return getContentLength(response).orElseThrow(
+				() -> new RuntimeException(
+						CONTENT_LENGTH + " header missing at " + rootUrl + ':' + anonymiseHash(hash)));
+	}
+
+	private static OptionalLong getContentLength(
+			final HttpResponse<?> response)
+	{
+		return response.headers().firstValueAsLong(CONTENT_LENGTH);
+	}
+
+	private static final String CONTENT_LENGTH = "Content-Length";
+
 
 	private static final String REQUEST_METHOD_HEAD = "HEAD";
 
@@ -74,21 +99,7 @@ public final class VaultHttpService extends VaultNonWritableService
 	{
 		try
 		{
-			final HttpURLConnection connection = connectForGet(hash, null);
-			final int contentLength = connection.getContentLength();
-			final byte[] result = new byte[contentLength];
-			try(InputStream in = connection.getInputStream())
-			{
-				int contentRead = 0;
-				while(contentRead<contentLength)
-				{
-					final int len = in.read(result, contentRead, contentLength-contentRead);
-					if(len<0)
-						break;
-					contentRead += len;
-				}
-			}
-			return result;
+			return getOk(hash, null, BodySubscribers::ofByteArray).body();
 		}
 		catch(final IOException e)
 		{
@@ -99,9 +110,9 @@ public final class VaultHttpService extends VaultNonWritableService
 	@Override
 	public void get(final String hash, final OutputStream sink) throws VaultNotFoundException, IOException
 	{
-		final HttpURLConnection connection = connectForGet(hash, null);
-		final byte[] result = new byte[Math.min(connection.getContentLength(), 8*1024)];
-		try(InputStream in = connection.getInputStream())
+		final HttpResponse<InputStream> response = getOk(hash, null, BodySubscribers::ofInputStream);
+		final byte[] result = new byte[toIntExact(Math.min(getContentLength(response, hash), 8*1024))];
+		try(InputStream in = response.body())
 		{
 			for(int len = in.read(result); len>=0; len = in.read(result))
 			{
@@ -110,9 +121,10 @@ public final class VaultHttpService extends VaultNonWritableService
 		}
 	}
 
-	private HttpURLConnection connectForGet(
+	private <T> HttpResponse<T> getOk(
 			final String hash,
-			final String requestMethod)
+			final String requestMethod,
+			final Supplier<HttpResponse.BodySubscriber<T>> bodySubscriberOk)
 			throws VaultNotFoundException, IOException
 	{
 		if(hash==null)
@@ -120,16 +132,26 @@ public final class VaultHttpService extends VaultNonWritableService
 		if(hash.isEmpty())
 			throw new IllegalArgumentException();
 
-		final URL url = new URL(rootUrl + '/' + directory.path(hash));
-		final HttpURLConnection connection = (HttpURLConnection)url.openConnection();
-		properties.setConnection(connection);
-		if(requestMethod!=null)
-			connection.setRequestMethod(requestMethod);
-		final int responseCode = connection.getResponseCode();
+		final HttpResponse<T> response;
+		try
+		{
+			final URI url = new URI(rootUrl + '/' + directory.path(hash));
+			response = properties.client.send(
+					properties.newRequest(url, requestMethod),
+					info -> info.statusCode()==HTTP_OK
+					? bodySubscriberOk.get()
+					: BodySubscribers.replacing(null));
+		}
+		catch(URISyntaxException | InterruptedException e)
+		{
+			throw wrap(hash, e);
+		}
+
+		final int responseCode = response.statusCode();
 		switch(responseCode)
 		{
 			case HTTP_OK:
-				return connection;
+				return response;
 			case HTTP_NOT_FOUND:
 				throw new VaultNotFoundException(hash);
 			default:
@@ -137,7 +159,7 @@ public final class VaultHttpService extends VaultNonWritableService
 		}
 	}
 
-	private RuntimeException wrap(final String hash, final IOException exception)
+	private RuntimeException wrap(final String hash, final Exception exception)
 	{
 		throw new RuntimeException(rootUrl + ':' + anonymiseHash(hash), exception);
 	}
@@ -149,19 +171,19 @@ public final class VaultHttpService extends VaultNonWritableService
 	// so we are free to change signature in the future without breaking API compatibility.
 	public Object probeGenuineServiceKey(final String serviceKey) throws Exception
 	{
-		final URL url = new URL(rootUrl + '/' + VAULT_GENUINE_SERVICE_KEY + '/' + serviceKey);
-		final HttpURLConnection connection = (HttpURLConnection)url.openConnection();
-		properties.setConnection(connection);
-		connection.setRequestMethod(REQUEST_METHOD_HEAD);
-		final int responseCode = connection.getResponseCode();
+		final URI url = new URI(rootUrl + '/' + VAULT_GENUINE_SERVICE_KEY + '/' + serviceKey);
+		final HttpResponse<Void> response = properties.client.send(
+				properties.newRequest(url, REQUEST_METHOD_HEAD),
+				responseInfo -> BodySubscribers.discarding());
+		final int responseCode = response.statusCode();
 		if(responseCode!=HTTP_OK)
 			throw new IllegalStateException(
 					"response code " + responseCode + ':' + url);
-		final long size = connection.getContentLength();
-		if(size!=-1 && // result -1 is returned if there is no Content-Length header, which happens for empty files as well
-			size!=0) // file must not have any content, because it is likely exposed to public
+		final OptionalLong size = getContentLength(response);
+		if(size.isPresent() && // Content-Length header may be absent for empty files
+			size.getAsLong()!=0) // file must not have any content, because it is likely exposed to public
 			throw new IllegalStateException(
-					"is not empty, but has size " + size + ':' + url);
+					"is not empty, but has size " + size.getAsLong() + ':' + url);
 
 		return url;
 	}
@@ -203,34 +225,39 @@ public final class VaultHttpService extends VaultNonWritableService
 						"but was >" + root + "< with scheme >" + scheme + '<');
 		}
 
-		private final int connectTimeout = valueTimeout("connectTimeout", ofSeconds(3));
-		private final int    readTimeout = valueTimeout(   "readTimeout", ofSeconds(3));
+		private final Duration connectTimeout = valueTimeout("connectTimeout", ofSeconds(3));
+		private final Duration    readTimeout = valueTimeout(   "readTimeout", ofSeconds(3));
 		private final boolean followRedirects = value("followRedirects", false);
 
-		private int valueTimeout(
+		private Duration valueTimeout(
 				final String key,
 				final Duration defaultValue)
 		{
-			return toIntExact( // toIntExact cannot fail because of maximum duration
-					value(key, defaultValue, ofSeconds(1), ofMillis(Integer.MAX_VALUE)).toMillis());
+			return
+					value(key, defaultValue, ofSeconds(1));
 		}
 
-		void setConnection(final HttpURLConnection connection)
+		final HttpClient client = HttpClient.newBuilder().
+					connectTimeout(connectTimeout).
+					followRedirects(followRedirects ? HttpClient.Redirect.ALWAYS : HttpClient.Redirect.NEVER).
+					build();
+
+		HttpRequest newRequest(final URI uri, final String method)
 		{
-			connection.setConnectTimeout(connectTimeout);
-			connection.setReadTimeout(readTimeout);
-			connection.setUseCaches(false);
-			connection.setInstanceFollowRedirects(followRedirects);
+			final HttpRequest.Builder result = HttpRequest.newBuilder(uri);
+			if(method!=null)
+				result.method(method, BodyPublishers.noBody());
+			return result.timeout(readTimeout).build();
 		}
 
 		@Probe(name="root.Exists")
-		private URL probeRootExists() throws IOException
+		private URI probeRootExists() throws URISyntaxException, IOException, InterruptedException
 		{
-			final URL url = new URL(root + '/');
-			final HttpURLConnection connection = (HttpURLConnection)url.openConnection();
-			setConnection(connection);
-			connection.setRequestMethod(REQUEST_METHOD_HEAD);
-			final int responseCode = connection.getResponseCode();
+			final URI url = new URI(root + '/');
+			final HttpResponse<Void> response = client.send(
+					newRequest(url, REQUEST_METHOD_HEAD),
+					info -> BodySubscribers.discarding());
+			final int responseCode = response.statusCode();
 			switch(responseCode)
 			{
 				case HTTP_OK:
